...
      <FlexView
        alignItems="center"
        justifyContent="center"
        flexDirection={isPortrait ? 'column' : 'row'}
        padding={['xl', 'xl', '2xl', 'xl']}
      >
        <QrCode size={qrSize} uri={wcUri} testID="qr-code" />
        <FlexView alignItems="center" margin="m">
          <Text variant="paragraph-500">Scan this QR code with your phone</Text>
          {showCopy && (
            <Link
              iconLeft="copySmall"
              color="fg-200"
              style={styles.copyButton}
              onPress={onCopyAddress}
              testID="copy-link"
            >
              Copy link
            </Link>
          )}
        </FlexView>
      </FlexView>
...
