...
      : undefined;

    return {
      Account: undefined,
      AccountDefault: undefined,
      AllWallets: 'All wallets',
      Connect: 'Connect wallet',
      ConnectSocials: 'All socials',
      ConnectingExternal: walletName ?? 'Connect wallet',
      SIWXSignMessage: 'Sign in',
      ConnectingSocial: socialName ?? 'Connecting Social',
      WalletConnect: walletName ?? 'WalletConnect',
      GetWallet: 'Get a wallet',
...
