...
        <FlexView
          flexDirection="row"
          justifyContent="space-between"
          alignItems="center"
          padding={['0', 'm', 'm', 'm']}
        >
          <IconLink icon="chevronLeft" size="md" onPress={onClose} testID="button-back" />
          <Text variant="paragraph-600">Select token</Text>
          <View style={styles.iconPlaceholder} />
        </FlexView>
        <FlexView margin={['0', '0', 'xs', '0']}>
          <InputText
            value={tokenSearch}
...
              {title}
            </Text>
          )}
          ListEmptyComponent={
            <Placeholder
              icon="coinPlaceholder"
              title="No tokens found"
              description="Your tokens will appear here"
            />
          }
          getItemLayout={(_, index) => ({
            length: ListTokenTotalHeight,
            offset: ListTokenTotalHeight * index,
...
