...
              <ListItem
                chevron
                icon="paperplane"
                iconColor="accent-100"
                iconBackgroundColor="accent-glass-015"
                onPress={onSendPress}
                testID="button-send"
                style={styles.actionButton}
              >
                <Text color="fg-100">Send</Text>
              </ListItem>
            ) : null}
            {showSwaps ? (
...
            ) : null}
            <ListItem
              icon="disconnect"
              onPress={onDisconnect}
              loading={disconnecting}
              iconBackgroundColor="gray-glass-010"
              testID="button-disconnect"
            >
              <Text color="fg-200">Disconnect</Text>
            </ListItem>
          </FlexView>
        </FlexView>
      </ScrollView>
...
