...
              <ListItem
                chevron
                icon="recycleHorizontal"
                iconColor="accent-100"
                iconBackgroundColor="accent-glass-015"
                onPress={onSwapPress}
                testID="button-swap"
                style={styles.actionButton}
              >
                <Text color="fg-100">Swap</Text>
              </ListItem>
            )}
            {!isAuth && (
...
            )}
            <ListItem
              icon="disconnect"
              onPress={onDisconnect}
              loading={disconnecting}
              iconBackgroundColor="gray-glass-010"
              testID="button-disconnect"
            >
              <Text color="fg-200">Disconnect</Text>
            </ListItem>
          </FlexView>
        </FlexView>
      </ScrollView>
...
