appId: com.walletconnect.web3modal.rnclisdk
---
- launchApp

- extendedWaitUntil:
    visible: 'Connect'
    timeout: 60000

- tapOn: 'Connect'

- tapOn:
    id: 'all-wallets'

- tapOn:
    id: 'button-qr-code'

- assertVisible:
    id: 'qr-code'

- tapOn:
    id: 'copy-link'

- openLink:
    link: https://react-wallet.walletconnect.com/walletconnect
    browser: true

# Hack until maestro supports accesing clipboard
# https://github.com/mobile-dev-inc/maestro/issues/830
- tapOn:
    text: 'e.g. wc:a281567bb3e4...'

- longPressOn:
    text: 'e.g. wc:a281567bb3e4...'

- tapOn:
    text: 'Paste'

- hideKeyboard

- tapOn:
    text: 'Connect'

- waitForAnimationToEnd

- scroll

- scroll

- longPressOn:
    point: 88%,88%

- waitForAnimationToEnd

- back

- tapOn:
    id: 'account-button'

- tapOn:
    id: 'button-network'

- tapOn:
    text: 'Polygon'

- waitForAnimationToEnd

- assertVisible:
    text: 'Polygon'

- tapOn:
    id: 'button-disconnect'

- assertVisible:
    id: 'connect-button'
